Added scroll notif, animations and title changes.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/assets/css/style.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    <h1>zauy.dev1</h1>
+    <section class="title-section" id="home">
+        <a href="/#home" draggable="false">
+            <h1 class="title-text title-text-shadow">
+                <span class="title-rainbow" style="margin-right: 1px;">zauy</span>.dev
+            </h1>
+    
+            <h1 class="title-text">
+                <span class="title-rainbow" style="margin-right: 1px;">zauy</span>.dev
+            </h1>
+        </a>
+        <div id="scroll-triangle"></div>
+    </section>
+    <h1>GRRR</h1>
+    <h1>GRRR</h1>
+    <h1>GRRR</h1>
+    <h1>GRRR</h1>
+    <h1>GRRR</h1>
+    <h1>GRRR</h1>
+    
+    <script src="/assets/js/script.js"></script>
 </body>
 </html>
