breaking my website cause I am too bad at css.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,19 @@
     <h1>GRRR</h1>
     <h1>GRRR</h1>
     <h1>GRRR</h1>
-
-    <script src="/assets/js/script.js"></script>
+    <h1>GRRR</h1>
+    <h1>GRRR</h1>
+    <h1>GRRR</h1>
+    <h1>GRRR</h1>
+    <h1>GRRR</h1>
+    <h1>GRRR</h1>
+    <h1>GRRR</h1>
+    <h1>GRRR</h1>
+    <h1>GRRR</h1>
+    <h1>GRRR</h1>
+    <h1>GRRR</h1>
+    <h1>GRRR</h1>
+    <script src="/assets/js/triangle.js"></script>
+    <script src="/assets/js/title-resize.js"></script>
 </body>
 </html>
