added meta changes.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/assets/css/style.css" rel="stylesheet">
+    <meta name="description" content="This is my own website. yay">
+    <meta property="og:url" content="">
+<meta property="og:title" content='zauy.dev'>
+<meta property="og:type" content="website">
+<meta property="og:description" content="This is my own website. yay">
     <title>Document</title>
 </head>
 <body>
