destroying my own webpage. yay

--- a/index.html
+++ b/index.html
@@ -13,17 +13,15 @@
 </head>
 <body>
     <section class="title-section" id="home">
-        <a href="/#home" draggable="false">
-            <h1 class="title-text title-text-shadow">
-                <span class="title-rainbow" style="margin-right: 1px;">zauy</span>.dev
-            </h1>
-    
+        <a href="/#home" draggable="false" class="title-link">
             <h1 class="title-text">
                 <span class="title-rainbow" style="margin-right: 1px;">zauy</span>.dev
             </h1>
         </a>
-        <div id="scroll-triangle"></div>
     </section>
+    
+    <div id="scroll-triangle"></div>
+
     <h1>GRRR</h1>
     <h1>GRRR</h1>
     <h1>GRRR</h1>
@@ -43,6 +41,5 @@
     <h1>GRRR</h1>
     <h1>GRRR</h1>
     <script src="/assets/js/triangle.js"></script>
-    <script src="/assets/js/title-resize.js"></script>
 </body>
 </html>
