--- a/index.html
+++ b/index.html
@@ -4,14 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/assets/css/style.css" rel="stylesheet">
-<<<<<<< HEAD
     <meta name="description" content="This is my own website. yay">
     <meta property="og:url" content="">
     <meta property="og:title" content='zauy.dev'>
     <meta property="og:type" content="website">
     <meta property="og:description" content="This is my own website. yay">
-=======
->>>>>>> parent of 158ab6e (added meta changes.)
     <title>Document</title>
 </head>
 <body>
@@ -23,7 +20,10 @@
         </a>
     </section>
     
-    <div id="scroll-triangle"></div>
+    <div id="triangle-container">
+        <div id="scroll-triangle"></div>
+    </div>
+    
 
     <h1>GRRR</h1>
     <h1>GRRR</h1>
