fixed all the bugs now. It looks clean. Oh god this took way too long.

--- a/index.html
+++ b/index.html
@@ -12,13 +12,18 @@
     <title>Document</title>
 </head>
 <body>
-    <section class="title-section" id="home">
-        <a href="/#home" draggable="false" class="title-link">
-            <h1 class="title-text">
-                <span class="title-rainbow" style="margin-right: 1px;">zauy</span>.dev
-            </h1>
-        </a>
-    </section>
+    <div class="text-container">
+        <section class="title-section">
+            <a href="/#home" draggable="false" class="title-link">
+                <h1 class="title-text">
+                    <span class="title-rainbow" style="margin-right: 1px;">zauy</span><span>.dev</span>
+                    <span class="rainbow-blur">zauy</span>
+                </h1>
+            </a>
+        </section>
+    </div>
+    
+    <div class="home" id="home"></div>
     
     <div id="triangle-container">
         <div id="scroll-triangle"></div>
