Fixed: All animations. Shadow blur. Padding. Scrolling. To be fixed: small height jump upon page load.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/assets/css/style.css" rel="stylesheet">
+    <link href="/assets/css/default.css" rel="stylesheet">
     <link href="/assets/css/keyframes.css" rel="stylesheet">
     <meta name="description" content="This is my own website. yay">
     <meta property="og:url" content="">
+    <meta property="og:image" content="/assets/img/png/icon_small.png">
     <meta property="og:title" content='zauy.dev'>
     <meta property="og:type" content="website">
-    <meta property="og:description" content="This is my own website. yay">
+    <meta property="og:description" content="This is my own website. Work in progress.">
     <title>Document</title>
 </head>
 <body>
@@ -17,8 +19,8 @@
         <section class="title-section" id="title-section">
             <a href="/#home" draggable="false" class="title-link">
                 <h1 class="title-text" id="title-text">
-                    <span class="title-rainbow" style="margin-right: 1px;">zauy</span><span>.dev</span>
                     <span class="rainbow-blur" id="rainbow-blur">zauy</span>
+                    <span class="title-rainbow" style="margin-right: 1px;">zauy</span><span>.dev</span>
                 </h1>
             </a>
         </section>
@@ -31,10 +33,15 @@
 
     <h1>GRR</h1>
     <h1>GRR</h1>
-
+    <h1>GRR</h1>
+    <h1>GRR</h1>
+    <h1>GRR</h1>
+    <h1>GRR</h1>
+    <h1>GRR</h1>
+    <h1>GRR</h1>
+    <h1>GRR</h1>
     <h1>GRR</h1>
 
-    <h1>GRR</h1>
 
     <script src="/assets/js/triangle.js"></script>
     <script src="/assets/js/title-resize.js"></script>
