Change meta information

--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <link href="/assets/css/style.css" rel="stylesheet">
     <link href="/assets/css/default.css" rel="stylesheet">
     <link href="/assets/css/keyframes.css" rel="stylesheet">
+    <link href="assets/img/png/icon_small.png" rel="icon">
     <meta name="description" content="This is my own website. yay">
     <meta property="og:url" content="">
     <meta property="og:image" content="/assets/img/png/icon_small.png">
     <meta property="og:title" content='zauy.dev'>
     <meta property="og:type" content="website">
     <meta property="og:description" content="This is my own website. Work in progress.">
-    <title>Document</title>
+    <title>zauy.dev</title>
 </head>
 <body>
     <div class="text-container" id="text-container">
