changed icon to svg

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <link href="/assets/css/style.css" rel="stylesheet">
     <link href="/assets/css/default.css" rel="stylesheet">
     <link href="/assets/css/keyframes.css" rel="stylesheet">
-    <link href="assets/img/png/icon_small.png" rel="icon">
+    <link href="assets/img/svg/icon.svg" rel="icon">
     <meta name="description" content="This is my own website. yay">
     <meta property="og:url" content="">
-    <meta property="og:image" content="/assets/img/png/icon_small.png">
+    <meta property="og:image" content="/assets/img/svg/icon.svg">
     <meta property="og:title" content='zauy.dev'>
     <meta property="og:type" content="website">
     <meta property="og:description" content="This is my own website. Work in progress.">
