Added title defaults, changed scroll responsivness.

--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
     <link href="assets/img/svg/icon.svg" rel="icon">
     <meta name="description" content="This is my own website. yay">
     <meta property="og:url" content="">
-    <meta property="og:image" content="/assets/img/svg/icon.svg">
+    <meta property="og:image" content="/assets/img/png/icon_small.png">
     <meta property="og:title" content='zauy.dev'>
     <meta property="og:type" content="website">
     <meta property="og:description" content="This is my own website. Work in progress.">
     <title>zauy.dev</title>
 </head>
 <body>
-    <div class="text-container" id="text-container">
+    <div class="text-container big-container" id="text-container">
         <section class="title-section" id="title-section">
             <a href="/#home" draggable="false" class="title-link">
-                <h1 class="title-text" id="title-text">
+                <h2 class="title-text big-title" id="title-text">
                     <span class="rainbow-blur" id="rainbow-blur">zauy</span>
                     <span class="title-rainbow" style="margin-right: 1px;">zauy</span><span>.dev</span>
-                </h1>
+                </h2>
             </a>
         </section>
     </div>
@@ -33,16 +33,29 @@
     </div>
 
     <h1>GRR</h1>
-    <h1>GRR</h1>
-    <h1>GRR</h1>
-    <h1>GRR</h1>
-    <h1>GRR</h1>
-    <h1>GRR</h1>
-    <h1>GRR</h1>
-    <h1>GRR</h1>
-    <h1>GRR</h1>
-    <h1>GRR</h1>
+    <h1>Grr</h1>
+    <h2>GRR</h2>
+    <h2>Grr</h2>
+    <p>GRRRR</p>
+    <p>Grrrr</p>
 
+    <h2>unordered list:</h2>
+    <ul>
+        <li>word</li>
+        <li>other word</li>
+        <li>different word</li>
+        <li>uncomparable word</li>
+        <li>unrelated word</li>
+    </ul>
+
+    <h2>ordered list:</h2>
+    <ol>
+        <li>first</li>
+        <li>second</li>
+        <li>third</li>
+        <li>fourth</li>
+        <li>fifth</li>
+    </ol>
 
     <script src="/assets/js/triangle.js"></script>
     <script src="/assets/js/title-resize.js"></script>
