--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,6 +16,7 @@
     <meta property="og:description" content="This is my own website. Work in progress.">
     <title>zauy.dev</title>
 </head>
+
 <body>
     <div class="text-container big-container" id="text-container">
         <section class="title-section" id="title-section">
@@ -32,32 +34,48 @@
         <div id="scroll-triangle"></div>
     </div>
 
-    <h1>GRR</h1>
-    <h1>Grr</h1>
-    <h2>GRR</h2>
-    <h2>Grr</h2>
-    <p>GRRRR</p>
-    <p>Grrrr</p>
-
-    <h2>unordered list:</h2>
-    <ul>
-        <li>word</li>
-        <li>other word</li>
-        <li>different word</li>
-        <li>uncomparable word</li>
-        <li>unrelated word</li>
-    </ul>
-
-    <h2>ordered list:</h2>
-    <ol>
-        <li>first</li>
-        <li>second</li>
-        <li>third</li>
-        <li>fourth</li>
-        <li>fifth</li>
-    </ol>
+    <div class="main" id="main">
+        <div class="example-text">
+            <div class="inner-text">
+                <h1>GRR</h1>
+                <h1>Grr</h1>
+                <h2>GRR</h2>
+                <h2>Grr</h2>
+                <p>GRRRR</p>
+                <p>Grrrr</p>
+                <h2>unordered list:</h2>
+                <ul>
+                    <li>word</li>
+                    <li>other word</li>
+                    <li>different word</li>
+                    <li>uncomparable word</li>
+                    <li>unrelated word</li>
+                    <li>
+                        <h1>GRR</h1>
+                        <h1>Grr</h1>
+                        <h2>GRR</h2>
+                        <h2>Grr</h2>
+                        <p>GRRRR</p>
+                        <p>Grrrr</p>
+                    </li>
+                </ul>
+        
+                <h2>ordered list: kekw</h2>
+                <ol>
+                    <li>first</li>
+                    <li>second</li>
+                    <li>third</li>
+                    <li>fourth</li>
+                    <li>fifth</li>
+                    <li><h1>GRR</h1><h1>Grr</h1><h2>GRR</h2><h2>Grr</h2><p>GRRRR</p><p>Grrrr</p>
+                    </li>
+                </ol>
+            </div>
+        </div>
+    </div>
 
     <script src="/assets/js/triangle.js"></script>
     <script src="/assets/js/title-resize.js"></script>
 </body>
+
 </html>
