first section commit

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="/assets/css/style.css" rel="stylesheet">
     <link href="/assets/css/default.css" rel="stylesheet">
     <link href="/assets/css/keyframes.css" rel="stylesheet">
+    <link href="/assets/css/sections.css" rel="stylesheet">
     <link href="assets/img/svg/icon.svg" rel="icon">
     <meta name="description" content="This is my own website. yay">
     <meta property="og:url" content="">
@@ -34,43 +35,41 @@
         <div id="scroll-triangle"></div>
     </div>
 
-    <div class="main" id="main">
-        <div class="example-text">
-            <div class="inner-text">
-                <h1>GRR</h1>
-                <h1>Grr</h1>
-                <h2>GRR</h2>
-                <h2>Grr</h2>
-                <p>GRRRR</p>
-                <p>Grrrr</p>
-                <h2>unordered list:</h2>
-                <ul>
-                    <li>word</li>
-                    <li>other word</li>
-                    <li>different word</li>
-                    <li>uncomparable word</li>
-                    <li>unrelated word</li>
-                    <li>
-                        <h1>GRR</h1>
-                        <h1>Grr</h1>
-                        <h2>GRR</h2>
-                        <h2>Grr</h2>
-                        <p>GRRRR</p>
-                        <p>Grrrr</p>
-                    </li>
-                </ul>
-        
-                <h2>ordered list: kekw</h2>
-                <ol>
-                    <li>first</li>
-                    <li>second</li>
-                    <li>third</li>
-                    <li>fourth</li>
-                    <li>fifth</li>
-                    <li><h1>GRR</h1><h1>Grr</h1><h2>GRR</h2><h2>Grr</h2><p>GRRRR</p><p>Grrrr</p>
-                    </li>
-                </ol>
-            </div>
+    <div id="sections">
+        <div class="main" id="socials">
+            <h1><img class="icon_small" src="/assets/img/svg/social.svg">Socials</h1>
+            <div class="main"><li>GRRRR</li></div>
+            <div class="main"><li>GRRRR</li></div>
+            <div class="main"><li>GRRRR</li></div>
+            <div class="main"><li>GRRRR</li></div>
+            <div class="main"><li>GRRRR</li></div>
+        </div>
+
+        <div class="main" id="socials">
+            <h1><img class="icon_small" src="/assets/img/svg/social.svg">Socials</h1>
+            <div class="main"><li>GRRRR</li></div>
+            <div class="main"><li>GRRRR</li></div>
+            <div class="main"><li>GRRRR</li></div>
+            <div class="main"><li>GRRRR</li></div>
+            <div class="main"><li>GRRRR</li></div>
+        </div>
+
+        <div class="main" id="socials">
+            <h1><img class="icon_small" src="/assets/img/svg/social.svg">Socials</h1>
+            <div class="main"><li>GRRRR</li></div>
+            <div class="main"><li>GRRRR</li></div>
+            <div class="main"><li>GRRRR</li></div>
+            <div class="main"><li>GRRRR</li></div>
+            <div class="main"><li>GRRRR</li></div>
+        </div>
+
+        <div class="main" id="socials">
+            <h1><img class="icon_small" src="/assets/img/svg/social.svg">Socials</h1>
+            <div class="main"><li>GRRRR</li></div>
+            <div class="main"><li>GRRRR</li></div>
+            <div class="main"><li>GRRRR</li></div>
+            <div class="main"><li>GRRRR</li></div>
+            <div class="main"><li>GRRRR</li></div>
         </div>
     </div>
 
