--- a/index.html
+++ b/index.html
@@ -1,80 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/assets/css/style.css" rel="stylesheet">
-    <link href="/assets/css/default.css" rel="stylesheet">
-    <link href="/assets/css/keyframes.css" rel="stylesheet">
-    <link href="/assets/css/sections.css" rel="stylesheet">
-    <link href="assets/img/svg/icon.svg" rel="icon">
-    <meta name="description" content="This is my own website. yay">
-    <meta property="og:url" content="">
-    <meta property="og:image" content="/assets/img/png/icon_small.png">
-    <meta property="og:title" content='zauy.dev'>
-    <meta property="og:type" content="website">
-    <meta property="og:description" content="This is my own website. Work in progress.">
-    <title>zauy.dev</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="/assets/css/style.css" rel="stylesheet">
+        <link href="/assets/css/default.css" rel="stylesheet">
+        <link href="/assets/css/keyframes.css" rel="stylesheet">
+        <link href="/assets/css/sections.css" rel="stylesheet">
+        <link href="assets/img/svg/icon.svg" rel="icon">
+        <meta name="description" content="This is my own website. yay">
+        <meta property="og:url" content>
+        <meta property="og:image" content="/assets/img/png/icon_small.png">
+        <meta property="og:title" content='zauy.dev'>
+        <meta property="og:type" content="website">
+        <meta property="og:description"
+            content="This is my own website. Work in progress.">
+        <title>zauy.dev</title>
+    </head>
 
-<body>
-    <div class="text-container big-container" id="text-container">
-        <section class="title-section" id="title-section">
-            <a href="/#home" draggable="false" class="title-link">
-                <h2 class="title-text big-title" id="title-text">
-                    <span class="rainbow-blur" id="rainbow-blur">zauy</span>
-                    <span class="title-rainbow" style="margin-right: 1px;">zauy</span><span>.dev</span>
-                </h2>
-            </a>
-        </section>
-    </div>
-    <div class="home" id="home"></div>
+    <body>
+        <div class="text-container big-container" id="text-container">
+            <section class="title-section" id="title-section">
+                <a href="/#home" draggable="false" class="title-link">
+                    <h2 class="title-text big-title" id="title-text">
+                        <span class="rainbow-blur" id="rainbow-blur">zauy</span>
+                        <span class="title-rainbow"
+                            style="margin-right: 1px;">zauy</span><span>.dev</span>
+                    </h2>
+                </a>
+            </section>
+        </div>
+        <div class="home" id="home"></div>
 
-    <div id="triangle-container">
-        <div id="scroll-triangle"></div>
-    </div>
-
-    <div id="sections">
-        <div class="main" id="socials">
-            <h1><img class="icon_small" src="/assets/img/svg/social.svg">Socials</h1>
-            <div class="main"><li>GRRRR</li></div>
-            <div class="main"><li>GRRRR</li></div>
-            <div class="main"><li>GRRRR</li></div>
-            <div class="main"><li>GRRRR</li></div>
-            <div class="main"><li>GRRRR</li></div>
+        <div id="triangle-container">
+            <div id="scroll-triangle"></div>
         </div>
 
-        <div class="main" id="socials">
-            <h1><img class="icon_small" src="/assets/img/svg/social.svg">Socials</h1>
-            <div class="main"><li>GRRRR</li></div>
-            <div class="main"><li>GRRRR</li></div>
-            <div class="main"><li>GRRRR</li></div>
-            <div class="main"><li>GRRRR</li></div>
-            <div class="main"><li>GRRRR</li></div>
-        </div>
+        <div id="sections">
+            <div class="main" id="socials">
+                <h1><img class="icon_small"
+                        src="/assets/img/svg/social.svg">Socials</h1>
+                <div class="main"><li>GRRRR</li></div>
+                <div class="main"><li>GRRRR</li></div>
+                <div class="main"><li>GRRRR</li></div>
+                <div class="main"><li>GRRRR</li></div>
+                <div class="main"><li>GRRRR</li></div>
+            </div>
 
-        <div class="main" id="socials">
-            <h1><img class="icon_small" src="/assets/img/svg/social.svg">Socials</h1>
-            <div class="main"><li>GRRRR</li></div>
-            <div class="main"><li>GRRRR</li></div>
-            <div class="main"><li>GRRRR</li></div>
-            <div class="main"><li>GRRRR</li></div>
-            <div class="main"><li>GRRRR</li></div>
-        </div>
+            <div class="main" id="socials">
+                <h1><img class="icon_small"
+                        src="/assets/img/svg/social.svg">Socials</h1>
+                <div class="main"><li>GRRRR</li></div>
+                <div class="main"><li>GRRRR</li></div>
+                <div class="main"><li>GRRRR</li></div>
+                <div class="main"><li>GRRRR</li></div>
+                <div class="main"><li>GRRRR</li></div>
+            </div>
 
-        <div class="main" id="socials">
-            <h1><img class="icon_small" src="/assets/img/svg/social.svg">Socials</h1>
-            <div class="main"><li>GRRRR</li></div>
-            <div class="main"><li>GRRRR</li></div>
-            <div class="main"><li>GRRRR</li></div>
-            <div class="main"><li>GRRRR</li></div>
-            <div class="main"><li>GRRRR</li></div>
-        </div>
-    </div>
+            <div class="main" id="socials">
+                <h1><img class="icon_small"
+                        src="/assets/img/svg/social.svg">Socials</h1>
+                <div class="main"><li>GRRRR</li></div>
+                <div class="main"><li>GRRRR</li></div>
+                <div class="main"><li>GRRRR</li></div>
+                <div class="main"><li>GRRRR</li></div>
+                <div class="main"><li>GRRRR</li></div>
+            </div>
 
-    <script src="/assets/js/triangle.js"></script>
-    <script src="/assets/js/title-resize.js"></script>
-</body>
+            <div class="main" id="socials">
+                <h1><img class="icon_small"
+                        src="/assets/img/svg/social.svg">Socials</h1>
+                <div class="main"><li>GRRRR</li></div>
+                <div class="main"><li>GRRRR</li></div>
+                <div class="main"><li>GRRRR</li></div>
+                <div class="main"><li>GRRRR</li></div>
+                <div class="main"><li>GRRRR</li></div>
+            </div>
+        </div>
+        
+        <svg id="wavy-line" width="100%" viewBox="0 0 800 400"></svg>
+
+        <script src="/assets/js/triangle.js"></script>
+        <script src="/assets/js/title-resize.js"></script>
+        <script src="/assets/js/waves.js"></script>
+    </body>
 
 </html>
