added lines to background

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </head>
 
     <body>
+
         <div class="text-container big-container" id="text-container">
             <section class="title-section" id="title-section">
                 <a href="/#home" draggable="false" class="title-link">
@@ -31,6 +32,11 @@
                 </a>
             </section>
         </div>
+        
+        <div class="lines"></div>
+
+        <image class="lines-image" src="/assets/img/svg/lines.svg">
+
         <div class="home" id="home"></div>
 
         <div id="triangle-container">
@@ -78,8 +84,9 @@
                 <div class="main"><li>GRRRR</li></div>
             </div>
         </div>
-        
-        <svg id="wavy-line" width="100%" viewBox="0 0 800 400"></svg>
+
+
+
 
         <script src="/assets/js/triangle.js"></script>
         <script src="/assets/js/title-resize.js"></script>
