added lines and aligned items inline

--- a/index.html
+++ b/index.html
@@ -43,45 +43,46 @@
             <div id="scroll-triangle"></div>
         </div>
 
+
         <div id="sections">
-            <div class="main" id="socials">
+            <div class="main section" id="socials">
                 <h1><img class="icon_small"
                         src="/assets/img/svg/social.svg">Socials</h1>
-                <div class="main"><li>GRRRR</li></div>
-                <div class="main"><li>GRRRR</li></div>
-                <div class="main"><li>GRRRR</li></div>
-                <div class="main"><li>GRRRR</li></div>
-                <div class="main"><li>GRRRR</li></div>
+                <div class="item main"><li>GRRRR</li></div>
+                <div class="item main"><li>GRRRR</li></div>
+                <div class="item main"><li>GRRRR</li></div>
+                <div class="item main"><li>GRRRR</li></div>
+                <div class="item main"><li>GRRRR</li></div>
             </div>
 
-            <div class="main" id="socials">
+            <div class="main section" id="games">
                 <h1><img class="icon_small"
-                        src="/assets/img/svg/social.svg">Socials</h1>
-                <div class="main"><li>GRRRR</li></div>
-                <div class="main"><li>GRRRR</li></div>
-                <div class="main"><li>GRRRR</li></div>
-                <div class="main"><li>GRRRR</li></div>
-                <div class="main"><li>GRRRR</li></div>
+                        src="/assets/img/svg/social.svg">Games</h1>
+                <div class="item main"><li>GRRRR</li></div>
+                <div class="item main"><li>GRRRR</li></div>
+                <div class="item main"><li>GRRRR</li></div>
+                <div class="item main"><li>GRRRR</li></div>
+                <div class="item main"><li>GRRRR</li></div>
             </div>
 
-            <div class="main" id="socials">
+            <div class="main section" id="gallery">
                 <h1><img class="icon_small"
-                        src="/assets/img/svg/social.svg">Socials</h1>
-                <div class="main"><li>GRRRR</li></div>
-                <div class="main"><li>GRRRR</li></div>
-                <div class="main"><li>GRRRR</li></div>
-                <div class="main"><li>GRRRR</li></div>
-                <div class="main"><li>GRRRR</li></div>
+                        src="/assets/img/svg/social.svg">Gallery</h1>
+                <div class="item main"><li>GRRRR</li></div>
+                <div class="item main"><li>GRRRR</li></div>
+                <div class="item main"><li>GRRRR</li></div>
+                <div class="item main"><li>GRRRR</li></div>
+                <div class="item main"><li>GRRRR</li></div>
             </div>
 
-            <div class="main" id="socials">
+            <div class="main socials section" id="others">
                 <h1><img class="icon_small"
-                        src="/assets/img/svg/social.svg">Socials</h1>
-                <div class="main"><li>GRRRR</li></div>
-                <div class="main"><li>GRRRR</li></div>
-                <div class="main"><li>GRRRR</li></div>
-                <div class="main"><li>GRRRR</li></div>
-                <div class="main"><li>GRRRR</li></div>
+                        src="/assets/img/svg/social.svg">Others</h1>
+                <div class="item main"><li>GRRRR</li></div>
+                <div class="item main"><li>GRRRR</li></div>
+                <div class="item main"><li>GRRRR</li></div>
+                <div class="item main"><li>GRRRR</li></div>
+                <div class="item main"><li>GRRRR</li></div>
             </div>
         </div>
 
