--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <div class="lines"></div>
 
-        <image class="lines-image" src="/assets/img/svg/lines.svg">
+        <image class="lines-image" src="/assets/img/svg/lines.svg"></image>
 
         <div class="home" id="home"></div>
 
@@ -53,7 +53,7 @@
 
             <div class="main section" id="games">
                 <h1><img class="icon_small"
-                        src="/assets/img/svg/social.svg">Games</h1>
+                        src="/assets/img/svg/controller.svg">Games</h1>
                 <div class="item main"><li>GRRRR</li></div>
                 <div class="item main"><li>GRRRR</li></div>
                 <div class="item main"><li>GRRRR</li></div>
@@ -63,7 +63,7 @@
 
             <div class="main section" id="gallery">
                 <h1><img class="icon_small"
-                        src="/assets/img/svg/social.svg">Gallery</h1>
+                        src="/assets/img/svg/gallery.svg">Gallery</h1>
                 <div class="item main"><li>GRRRR</li></div>
                 <div class="item main"><li>GRRRR</li></div>
                 <div class="item main"><li>GRRRR</li></div>
@@ -71,9 +71,9 @@
                 <div class="item main"><li>GRRRR</li></div>
             </div>
 
-            <div class="main socials section" id="others">
+            <div class="main section" id="others">
                 <h1><img class="icon_small"
-                        src="/assets/img/svg/social.svg">Others</h1>
+                        src="/assets/img/svg/others.svg">Others</h1>
                 <div class="item main"><li>GRRRR</li></div>
                 <div class="item main"><li>GRRRR</li></div>
                 <div class="item main"><li>GRRRR</li></div>
